# oxeo-flows

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  cloudbuild.yaml  packer.json  pub.py  requirements.txt  setup.cfg  tasks.py  web.py
.github/workflows/: build-deploy.yml  build-images.yml  packer-build.yml  prefect-register.yml  vertex-agent.yml
agent/: Dockerfile
docs/: README.md  agents.md  aws-build.md  aws-eks.md  dask.md  gcloud.md  kubernetes.md  logs.py  peering-command.sh  pub.py  secrets.md  tasks.py
docs/packer/: create_packer_config.py  packer.json  packer_empty.json
docs/run/: requirements.txt  web.py
flows/: extract.py  predict.py
gcloud/: README.md  dataproc-dask-install.sh
infra/: Dockerfile  Dockerfile.base  Dockerfile.base-cpu  Dockerfile.base-gpu  Dockerfile.flows  Dockerfile.flows-cpu  Dockerfile.flows-gpu  Dockerfile.oxeo-flows  Dockerfile.oxeo-flows-gpu  Dockerfile.python-gcloud-auth  Dockerfile.pytorch-gcloud-auth  cloudbuild-base-cpu.yaml  cloudbuild-base-gpu.yaml  cloudbuild-base.yaml  cloudbuild-flows-cpu.yaml  cloudbuild-flows-gpu.yaml  cloudbuild-flows.yaml  cloudbuild-oxeo-flows-gpu.yaml  cloudbuild-oxeo-flows.yaml  cloudbuild-python-gcloud-auth.yaml  cloudbuild-pytorch-gcloud-auth.yaml  cluster.yaml  db-service.yaml  helm-chart-dask.yaml  kubernetes-agent.yaml  provisioner.yaml  worker.yaml
notebooks/: README.md  dask.ipynb
oxeo/flows/: __init__.py  calc-ndvi.py  config.py  dask_issue.py  extract.py  kub-predict.py  kub.py  models.py  ndvi.py  precip.py  predict-no-dask.py  predict.py  reduce.py  soil_moisture.py  template.py  test-aws.py  test-cuda.py  utils.py  water.py
packer/: cloud_config.yaml  create_cloud_config.py  create_packer_config.py  packer.json
prefect/: README.md  extract.py  output.txt  test.py
tests/: test_nothing.py
