# Using setup.cfg instead of setup.py to make our live easier
# Instructions here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# Big example here: https://github.com/pallets/flask/blob/main/setup.cfg

[metadata]
name = oxeo-flows
version = attr: oxeo.flows.__version__

[options]
packages = find_namespace:
install_requires =
    numpy==1.21.4
    pandas==1.3.4
    geopandas==0.10.2
    pystac==1.1.0
    shapely==1.8.0
    prefect[postgres,gcp,github,kubernetes]==1.0.0
    xarray==0.20.1
    dask==2021.11.2
    distributed==2021.11.2
    dask-kubernetes==2021.10.0
    blosc==1.10.2
    lz4==3.1.3
    msgpack==1.0.2
    gcsfs==2021.11.0
    pyproj==3.2.1
    cryptography==35.0.0
    matplotlib==3.5.1
    satextractor @ git+ssh://git@github.com/oxfordeo/sat-extractor.git
    oxeo-water[ml] @ git+ssh://git@github.com/oxfordeo/oxeo-water.git

[options.packages.find]
include = oxeo.*

[options.extras_require]
dev =
    pre-commit
    black
    pytest
    mypy
    tox

[options.entry_points]
# This is an example:
console_scripts =
#     oxeowater = oxeo.water.main:run_model

[tox:tox]
envlist = py39
skipsdist = true

[testenv]
install_command = pip install {opts} {packages}
basepython = python3.9
setenv =
  PYTHONPATH=.
deps =
    .[dev]
    mypy
commands =
    pytest
    mypy {posargs:oxeo}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:pytest]
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
profile=black
known_first_party = oxeo
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
