# Using setup.cfg instead of setup.py to make our live easier
# Instructions here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# Big example here: https://github.com/pallets/flask/blob/main/setup.cfg

[metadata]
name = oxeo-flows
version = attr: oxeo.flows.__version__

[options]
packages = find_namespace:
install_requires =
    cryptography==35.0.0
    dateparser==1.1.1
    geopandas>=0.11.0
    httpx>=0.23.0
    lz4==3.1.3
    pydantic>=1.9.1
    pystac>=1.4.0
    pystac-client>=0.4.0
    prefect[postgres,aws,github,kubernetes]==1.2.2
    stackstac>=0.4.1
    rasterio>=1.3.2
    #oxeo-api @ git+ssh://git@github.com/oxfordeo/oxeo-api.git
    h2ox-reducer @ git+https://github.com/H2Oxford/h2ox-reducer.git
    sentinelhub==3.7
    xarray[io]
    gcsfs
    loguru
    geojson
    boto3==1.24.59
    botocore==1.27.59
    numpy>=1.22.0


[options.packages.find]
include = oxeo.*

[options.extras_require]
water =
    oxeo-water[sql] @ git+ssh://git@github.com/oxfordeo/oxeo-water.git
torch =
    oxeo-water[sql,ml] @ git+ssh://git@github.com/oxfordeo/oxeo-water.git
dev =
    pre-commit
    black
    pytest
    mypy
    tox

[options.entry_points]
# This is an example:
console_scripts =
#     oxeowater = oxeo.water.main:run_model

[tox:tox]
envlist = py39
skipsdist = true

[testenv]
install_command = pip install {opts} {packages}
basepython = python3.9
setenv =
  PYTHONPATH=.
deps =
    .[dev]
    mypy
commands =
    pytest
    mypy {posargs:oxeo}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:pytest]
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
profile=black
known_first_party = oxeo
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
